@@ -37,4 +37,3 @@ confdb.dbType=mysql
 confdb.dbHost=cmssrv0
 confdb.dbUser=hlt
 confdb.dbPwrd=hlt
-
